--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <h1>No file</h1>
     <app-root></app-root>
     <script src="runtime.js"></script>
     <script src="polyfills.js"></script>
