--- a/404.html
+++ b/404.html
@@ -5,14 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>e-kart</title>
-    <base href="/e-kart/">
-    <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript">
+      // Redirect all requests to the index.html
+      window.location.href = '/e-kart/';
+    </script>
   </head>
   <body>
-    <h1>No file</h1>
-    <app-root></app-root>
-    <script src="runtime.js"></script>
-    <script src="polyfills.js"></script>
-    <script src="main.js"></script>
   </body>
 </html>
